sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:4: error: illegal start of simple pattern
  for (i <- 1 to getNombreValeurs()){
^